--- a/sass/main-page/sections/_info.scss
+++ b/sass/main-page/sections/_info.scss
@@ -37,19 +37,19 @@
   }
 
   &__item:nth-child(1)::before {
-    background-image: url("../../../img/antenna.svg");
+    background-image: url("../img/antenna.svg");
   }
 
   &__item:nth-child(2)::before {
-    background-image: url("../../../img/clock.svg");
+    background-image: url("../img/clock.svg");
   }
 
   &__item:nth-child(3)::before {
-    background-image: url("../../../img/diagram.svg");
+    background-image: url("../img/diagram.svg");
   }
 
   &__item:nth-child(4)::before {
-    background-image: url("../../../img/astronaut.svg");
+    background-image: url("../img/astronaut.svg");
   }
 
   &__item {
