--- a/css/main.css
+++ b/css/main.css
@@ -549,16 +549,16 @@ img {
   }
 }
 .info__item:nth-child(1)::before {
-  background-image: url("../../../img/antenna.svg");
+  background-image: url("../img/antenna.svg");
 }
 .info__item:nth-child(2)::before {
-  background-image: url("../../../img/clock.svg");
+  background-image: url("../img/clock.svg");
 }
 .info__item:nth-child(3)::before {
-  background-image: url("../../../img/diagram.svg");
+  background-image: url("../img/diagram.svg");
 }
 .info__item:nth-child(4)::before {
-  background-image: url("../../../img/astronaut.svg");
+  background-image: url("../img/astronaut.svg");
 }
 .info__item {
   animation-name: features-item;
