--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,4 @@
 @import "./main-page/sections/customers";
 @import "./components/footer";
 @import "./main-page/sections/modal";
+@import "./components/mobile-menu";
