--- a/sass/portfolio-page/sections/_hero.scss
+++ b/sass/portfolio-page/sections/_hero.scss
@@ -12,21 +12,26 @@
     padding-bottom: 94px;
   }
 
+  &__container {
+    @media screen and (min-width: 1200px) {
+      width: 1194px;
+    }
+  }
+
   &__list {
     margin-bottom: 40px;
     flex-wrap: wrap;
-    justify-content: flex-start;
-    @include flexbox($gap: 8px);
+    display: flex;
+    gap: 8px;
+    justify-content: auto;
 
     @media screen and (min-width: 768px) {
       margin-bottom: 30px;
-      flex-wrap: nowrap;
       justify-content: center;
     }
 
     @media screen and (min-width: 1200px) {
       margin-bottom: 50px;
-      flex-wrap: nowrap;
       justify-content: center;
     }
   }
@@ -105,6 +110,7 @@
   }
 
   &__poster {
+    position: relative;
     background-color: $accent-color;
     border: 1px solid #eeeeee;
     max-width: 450px;
@@ -112,7 +118,7 @@
     max-height: 404px;
 
     @media screen and (min-width: 768px) {
-      width: 354px;
+      width: 352px;
       height: 440px;
     }
 
