--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -7,3 +7,4 @@
 @import "./components/header";
 @import "./portfolio-page/sections/hero";
 @import "./components/footer";
+@import "./components/mobile-menu";
