--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -6,10 +6,11 @@ img {
   width: 100%;
   max-width: 100%;
   display: block;
+  height: auto;
 }
 
 .container {
-  width: 100%;
+  padding: 0 15px;
   margin: 0 auto;
   outline: solid red 2px;
 }
@@ -173,11 +174,10 @@ input {
     padding-bottom: 25px;
   }
 }
-.header__container {
+.header__nav {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  gap: 0px;
 }
 @media screen and (min-width: 768px) {
   .header__nav {
@@ -229,6 +229,25 @@ input {
   .header__logo2 {
     font-size: 26px;
     display: inherit;
+  }
+}
+.header__button {
+  width: 40px;
+  height: 40px;
+  opacity: 1;
+  display: block;
+  background-color: #ffffff;
+}
+@media screen and (min-width: 768px) {
+  .header__button {
+    opacity: 0;
+    position: absolute;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__button {
+    opacity: 0;
+    position: absolute;
   }
 }
 .header__list {
@@ -432,6 +451,21 @@ input {
   color: #2196f3;
   cursor: pointer;
 }
+.header__btnimg {
+  height: 40px;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header__btnimg {
+    opacity: 0;
+    position: absolute;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__btnimg {
+    opacity: 0;
+    position: absolute;
+  }
+}
 
 .hero {
   padding-top: 60px;
@@ -449,26 +483,27 @@ input {
     padding-bottom: 94px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .hero__container {
+    width: 1194px;
+  }
+}
 .hero__list {
   margin-bottom: 40px;
   flex-wrap: wrap;
-  justify-content: flex-start;
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
   gap: 8px;
+  justify-content: auto;
 }
 @media screen and (min-width: 768px) {
   .hero__list {
     margin-bottom: 30px;
-    flex-wrap: nowrap;
     justify-content: center;
   }
 }
 @media screen and (min-width: 1200px) {
   .hero__list {
     margin-bottom: 50px;
-    flex-wrap: nowrap;
     justify-content: center;
   }
 }
@@ -533,6 +568,7 @@ input {
   animation-duration: 1s;
 }
 .hero__poster {
+  position: relative;
   background-color: #ffffff;
   border: 1px solid #eeeeee;
   max-width: 450px;
@@ -541,7 +577,7 @@ input {
 }
 @media screen and (min-width: 768px) {
   .hero__poster {
-    width: 354px;
+    width: 352px;
     height: 440px;
   }
 }
@@ -687,6 +723,7 @@ input {
 }
 .footer__container {
   text-align: center;
+  padding-right: 15px;
 }
 @media screen and (min-width: 768px) {
   .footer__container {
@@ -694,7 +731,6 @@ input {
     justify-content: center;
     align-items: flex-start;
     gap: 0px;
-    flex: 0 0 100%;
     flex-wrap: wrap;
   }
 }
@@ -802,6 +838,12 @@ input {
   margin-bottom: 20px;
   font-family: Roboto;
 }
+@media screen and (min-width: 1200px) {
+  .footer__subtitle {
+    display: flex;
+    justify-content: flex-start;
+  }
+}
 .footer__least {
   display: flex;
   justify-content: center;
@@ -831,6 +873,7 @@ input {
 }
 
 .basement__form {
+  padding-top: 60px;
   text-align: center;
 }
 @media screen and (min-width: 768px) {
@@ -851,13 +894,15 @@ input {
   font-style: normal;
   text-transform: uppercase;
   margin-bottom: 20px;
-  margin-top: 60px;
   font-family: Roboto;
 }
 @media screen and (min-width: 1200px) {
   .basement__title {
+    display: flex;
+    justify-content: flex-start;
     margin-bottom: 20px;
     margin-top: 0;
+    padding: none;
   }
 }
 .basement__container {
@@ -869,33 +914,30 @@ input {
   }
 }
 .basement__input {
-  max-width: 450px;
-  width: 100%;
-  height: 50px;
-  flex-shrink: 0;
-  border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   background-color: rgba(33, 150, 243, 0);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  margin-right: 15px;
-  margin-left: 15px;
-  padding-left: 16px;
-  margin-bottom: 20px;
   color: #fff;
+  padding-left: 16px;
+  width: 274px;
+  height: 50px;
+  margin-bottom: 20px;
+  border-radius: 4px;
 }
 @media screen and (min-width: 480px) {
   .basement__input {
-    width: 450px;
-    height: 50px;
-    flex-shrink: 1;
+    width: 434px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .basement__input {
+    width: 434px;
   }
 }
 @media screen and (min-width: 1200px) {
   .basement__input {
     width: 358px;
-    height: 50px;
     margin-right: 12px;
-    padding-left: 16px;
   }
 }
 .basement__input::-moz-placeholder {
@@ -945,4 +987,121 @@ input {
   padding-top: 3px;
   padding-bottom: 3px;
   fill: #ffffff;
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+  display: none;
+}
+
+.menu {
+  display: flex;
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ffffff;
+  flex-direction: column;
+  padding: auto;
+  padding-left: 40px;
+  padding-top: 48px;
+  margin: auto;
+}
+.menu__btnclose {
+  height: 30px;
+  width: 30px;
+  right: 8px;
+  top: 8px;
+  border: 1px rgba(0, 0, 0, 0.062745098) solid;
+  border-radius: 20px;
+  background-color: #ffffff;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+}
+.menu__icon {
+  height: 18px;
+  fill: rgba(0, 0, 0, 0.062745098);
+}
+.menu__icon:hover {
+  fill: #2196f3;
+}
+.menu__list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 32px;
+  margin-bottom: 302px;
+}
+.menu__link {
+  color: #212121;
+  font-family: Roboto;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.8px;
+  text-decoration: none;
+}
+.menu__link:hover {
+  color: #2196f3;
+}
+.menu__list2 {
+  display: flex;
+  flex-direction: column;
+  row-gap: 32px;
+}
+.menu__number {
+  color: #757575;
+  font-family: Roboto;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.68px;
+  text-decoration: none;
+}
+.menu__number:hover {
+  font-size: 34px;
+  letter-spacing: 0.68px;
+  color: #2196f3;
+}
+.menu__email {
+  color: #757575;
+  font-family: Roboto;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  letter-spacing: 0.48px;
+  text-decoration: none;
+}
+.menu__email:hover {
+  font-size: 34px;
+  letter-spacing: 0.68px;
+  color: #2196f3;
+}
+.menu__list3 {
+  display: flex;
+  margin-top: 64px;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+  flex-wrap: wrap;
+}
+.menu__itm {
+  display: flex;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+}
+.menu__contacts {
+  color: #2196f3;
+  font-size: 18px;
+  text-decoration: none;
+}
+.menu__line {
+  width: 1px;
+  height: 22px;
+  background-color: #757575;
 }/*# sourceMappingURL=portfolio.css.map */
