--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -17,10 +17,11 @@ img {
   width: 100%;
   max-width: 100%;
   display: block;
+  height: auto;
 }
 
 .container {
-  width: 100%;
+  padding: 0 15px;
   margin: 0 auto;
   outline: solid red 2px;
 
