--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -5,12 +5,14 @@
   animation-name: from-down;
   animation-duration: 1s;
 
+
+
   &__container {
     text-align: center;
+    padding-right: 15px;
 
     @media screen and (min-width: 768px) {
       @include flexbox();
-      flex: 0 0 100%;
       flex-wrap: wrap;
     }
   }
@@ -125,6 +127,11 @@
     text-transform: uppercase;
     margin-bottom: 20px;
     font-family: Roboto;
+
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      justify-content: flex-start;
+    }
   }
 
   &__least {
@@ -158,7 +165,9 @@
 }
 
 .basement {
+
   &__form {
+    padding-top: 60px;
     text-align: center;
 
     @media screen and (min-width: 768px) {
@@ -179,12 +188,14 @@
     @extend %title-styles;
     text-transform: uppercase;
     margin-bottom: 20px;
-    margin-top: 60px;
     font-family: Roboto;
 
     @media screen and (min-width: 1200px) {
+      display: flex;
+      justify-content: flex-start;
       margin-bottom: 20px;
       margin-top: 0;
+      padding: none;
     }
   }
 
@@ -197,31 +208,27 @@
   }
 
   &__input {
-    max-width: 450px;
-    width: 100%;
-    height: 50px;
-    flex-shrink: 0;
-    border-radius: 4px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     background-color: rgba(33, 150, 243, 0);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    margin-right: 15px;
-    margin-left: 15px;
-    padding-left: 16px;
-    margin-bottom: 20px;
     color: #fff;
+    padding-left: 16px;
+    width: 274px;
+    height: 50px;
+    margin-bottom: 20px;
+    border-radius: 4px;
 
     @media screen and (min-width: 480px) {
-      width: 450px;
-      height: 50px;
-      flex-shrink: 1;
+      width: 434px;
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: 434px;
     }
 
     @media screen and (min-width: 1200px) {
       width: 358px;
-      height: 50px;
       margin-right: 12px;
-      padding-left: 16px;
     }
 
     &::placeholder {
