--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -16,11 +16,11 @@
     padding-bottom: 25px;
   }
 
-  &__container {
-    @include flexbox($center-y: center);
-  }
-
   &__nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
     @media screen and (min-width: 768px) {
       display: inline;
       @include flexbox($center-y: center);
@@ -58,7 +58,7 @@
   &__logo2 {
     color: $logo-text-color;
     font-family: Raleway;
-    
+
     @extend %title-styles;
     font-size: 24px;
 
@@ -70,6 +70,23 @@
     @media screen and (min-width: 1200px) {
       font-size: 26px;
       display: inherit;
+    }
+  }
+
+  &__button {
+    width: 40px;
+    height: 40px;
+    opacity: 1;
+    display: block;
+    background-color: $accent-color;
+
+    @media screen and (min-width: 768px) {
+      opacity: 0;
+      position: absolute;
+    }
+    @media screen and (min-width: 1200px) {
+      opacity: 0;
+      position: absolute;
     }
   }
 
@@ -259,5 +276,19 @@
     fill: $hover-color;
     color: $hover-color;
     cursor: pointer;
+  }
+
+  &__btnimg {
+    height: 40px;
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      opacity: 0;
+      position: absolute;
+    }
+
+    @media screen and (min-width: 1200px) {
+      opacity: 0;
+      position: absolute;
+    }
   }
 }
