--- a/sass/main-page/sections/_hero.scss
+++ b/sass/main-page/sections/_hero.scss
@@ -1,22 +1,20 @@
 .hero {
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../img/working.webp);
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-bottom: 128px;
-  padding-top: 118px;
-
-  @media screen and (min-width: 768px) {
+  &__section {
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../img/working.webp);
+    background-repeat: no-repeat;
+    background-position: center center;  
+    background-size: cover;
     padding-bottom: 118px;
-    padding-top: 118px;
-  }
+    padding-top: 128px;
 
-  @media screen and (min-width: 1200px) {
-    padding-bottom: 200px;
-    padding-top: 200px;
+    @media screen and (min-width: 1200px) {
+      padding-bottom: 200px;
+      padding-top: 200px;
+    }
   }
 
   &__container {
