--- a/sass/main-page/sections/_modal.scss
+++ b/sass/main-page/sections/_modal.scss
@@ -19,7 +19,7 @@
 }
 
 .modal {
-  width: 455px;
+  width: 290px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -27,6 +27,14 @@
   border-radius: 4px;
   background-color: $accent-color;
   padding: 40px;
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+}
+
+@media screen and (min-width: 1200px) {
+    width: 528px;
+}
 
   &__form {
     flex-direction: column;
@@ -105,11 +113,19 @@
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     height: 40px;
-    width: 407px;
+    width: 240px;
     padding-left: 41px;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-duration: 250ms;
     transition-property: fill, border-color;
+
+    @media screen and (min-width: 480px) {
+      width: 370px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 448px;
+    }
 
     &:hover {
       fill: $hover-color;
@@ -137,7 +153,7 @@
     box-sizing: border-box;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    width: 448px;
+    width: 283px;
     height: 96px;
     padding: 12px 16px 65px 16px;
     text-align: left;
@@ -150,6 +166,14 @@
     transition-duration: 250ms;
     transition-property: fill, border-color;
     font-family: Roboto;
+
+    @media screen and (min-width: 480px) {
+      width: 413px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 491px;
+    }
   }
 
   &__agrees {
@@ -176,11 +200,16 @@
 
   &__agrlink {
     color: $hover-color;
-    @extend %text-styles;
-    font-style: normal;
+    font-size: 12px;
+    font-weight: 400;
     line-height: 24px;
+    letter-spacing: 0.42px;
     text-decoration-line: underline;
     font-family: Roboto;
+
+    @media screen and (min-width: 480px) {
+      font-size: 14px;
+    }
   }
 
   &__button {
