--- a/css/main.css
+++ b/css/main.css
@@ -1472,7 +1472,7 @@ img {
 .menu {
   display: flex;
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   top: 0;
   left: 0;
   right: 0;
@@ -1483,6 +1483,16 @@ img {
   padding-left: 40px;
   padding-top: 48px;
   margin: auto;
+}
+@media screen and (min-width: 480px) and (min-width: 1200px) {
+  .menu {
+    display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .menu {
+    display: none;
+  }
 }
 .menu__btnclose {
   height: 30px;
