--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -7,7 +7,7 @@
 .menu {
   display: flex;
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   top: 0;
   left: 0;
   right: 0;
@@ -18,6 +18,13 @@
   padding-left: 40px;
   padding-top: 48px;
   margin: auto;
+
+  @media screen and (min-width: 480px) and (min-width: 1200px) {
+    display: none;
+  }
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 
   &__btnclose {
     height: 30px;
