--- a/css/main.css
+++ b/css/main.css
@@ -468,17 +468,38 @@ img {
 }
 
 .hero__section {
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/working.webp);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../../img/mobile/hero-working@mobile-1x.webp);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
   padding-bottom: 118px;
   padding-top: 128px;
 }
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .hero__section .hero {
+    background-image: url(../../../img/mobile/hero-working@mobile-2x.webp);
+  }
+}
+@media screen and (min-width: 768px) {
+  .hero__section {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../../img/tablet/hero-working@tablet-1x.webp);
+  }
+}
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero__section .hero {
+    background-image: url(../../../img/tablet/hero-working@tablet-2x.webp);
+  }
+}
 @media screen and (min-width: 1200px) {
   .hero__section {
     padding-bottom: 200px;
     padding-top: 200px;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../../img/desktop/hero-working@desktop-1x.webp);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero__section .hero {
+    background-image: url(../../../img/desktop/hero-working@desktop-2x.webp);
   }
 }
 .hero__container {
