--- a/css/main.css
+++ b/css/main.css
@@ -473,11 +473,11 @@ img {
   background-position: center center;
   background-size: cover;
   padding-bottom: 118px;
-  padding-top: 128px;
+  padding-top: 118px;
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero__section .hero {
-    background-image: url(../../../img/mobile/hero-working@mobile-2x.webp);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../../img/mobile/hero-working@mobile-2x.webp);
   }
 }
 @media screen and (min-width: 768px) {
@@ -487,7 +487,7 @@ img {
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero__section .hero {
-    background-image: url(../../../img/tablet/hero-working@tablet-2x.webp);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../../img/tablet/hero-working@tablet-2x.webp);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -499,7 +499,7 @@ img {
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero__section .hero {
-    background-image: url(../../../img/desktop/hero-working@desktop-2x.webp);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../../img/desktop/hero-working@desktop-2x.webp);
   }
 }
 .hero__container {
@@ -1526,10 +1526,19 @@ img {
   position: absolute;
   justify-content: center;
   align-items: center;
+  border: solid 1px;
+  border-radius: 50%;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0px;
+  cursor: pointer;
+  stroke: rgba(0, 0, 0, 0.1);
 }
 .menu__icon {
   height: 18px;
-  fill: rgba(0, 0, 0, 0.062745098);
+  fill: #000;
 }
 .menu__icon:hover {
   fill: #2196f3;
