--- a/sass/main-page/sections/_hero.scss
+++ b/sass/main-page/sections/_hero.scss
@@ -3,20 +3,24 @@
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
-      ),
+        ),
       url(../../../img/mobile/hero-working@mobile-1x.webp);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
     padding-bottom: 118px;
-    padding-top: 128px;
+    padding-top: 118px;
 
     @media (min-device-pixel-ratio: 2),
       (-webkit-min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
       .hero {
-        background-image: url(../../../img/mobile/hero-working@mobile-2x.webp);
+        background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+          ),
+        url(../../../img/mobile/hero-working@mobile-2x.webp);
       }
     }
 
@@ -32,7 +36,11 @@
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
         .hero {
-          background-image: url(../../../img/tablet/hero-working@tablet-2x.webp);
+          background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../../../img/tablet/hero-working@tablet-2x.webp);
         }
       }
     }
@@ -51,7 +59,11 @@
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
         .hero {
-          background-image: url(../../../img/desktop/hero-working@desktop-2x.webp);
+          background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../../../img/desktop/hero-working@desktop-2x.webp);
         }
       }
     }
