--- a/sass/main-page/sections/_hero.scss
+++ b/sass/main-page/sections/_hero.scss
@@ -4,7 +4,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
         ),
-      url(../../../img/mobile/hero-working@mobile-1x.webp);
+      url(../img/mobile/hero-working@mobile-1x.webp);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -20,16 +20,17 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
           ),
-        url(../../../img/mobile/hero-working@mobile-2x.webp);
+        url(../img/mobile/hero-working@mobile-2x.webp);
       }
     }
+  
 
     @media screen and (min-width: 768px) {
       background-image: linear-gradient(
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../../img/tablet/hero-working@tablet-1x.webp);
+        url(../img/tablet/hero-working@tablet-1x.webp);
 
       @media (min-device-pixel-ratio: 2),
         (-webkit-min-device-pixel-ratio: 2),
@@ -40,7 +41,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../../img/tablet/hero-working@tablet-2x.webp);
+        url(../img/tablet/hero-working@tablet-2x.webp);
         }
       }
     }
@@ -52,7 +53,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../../img/desktop/hero-working@desktop-1x.webp);
+        url(../img/desktop/hero-working@desktop-1x.webp);
 
       @media (min-device-pixel-ratio: 2),
         (-webkit-min-device-pixel-ratio: 2),
@@ -63,7 +64,7 @@
           rgba(47, 48, 58, 0.4),
           rgba(47, 48, 58, 0.4)
         ),
-        url(../../../img/desktop/hero-working@desktop-2x.webp);
+        url(../img/desktop/hero-working@desktop-2x.webp);
         }
       }
     }
