--- a/css/main.css
+++ b/css/main.css
@@ -1506,6 +1506,8 @@ img {
 
 .menu {
   display: flex;
+  justify-content: space-between;
+  flex-direction: column;
   position: fixed;
   z-index: 3;
   top: 0;
@@ -1561,7 +1563,7 @@ img {
   display: flex;
   flex-direction: column;
   row-gap: 32px;
-  margin-bottom: 302px;
+  margin-bottom: auto;
 }
 .menu__link {
   color: #212121;
@@ -1576,10 +1578,14 @@ img {
 .menu__link:hover {
   color: #2196f3;
 }
+.menu__containers {
+  padding-bottom: 48px;
+}
 .menu__list2 {
   display: flex;
   flex-direction: column;
   row-gap: 32px;
+  padding: auto;
 }
 .menu__number {
   color: #757575;
