--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -6,6 +6,8 @@
 
 .menu {
   display: flex;
+  justify-content: space-between;
+  flex-direction: column;
   position: fixed;
   z-index: 3;
   top: 0;
@@ -59,7 +61,7 @@
     display: flex;
     flex-direction: column;
     row-gap: 32px;
-    margin-bottom: 302px;
+    margin-bottom: auto;
   }
 
   &__link {
@@ -77,10 +79,15 @@
     }
   }
 
+  &__containers {
+    padding-bottom: 48px;
+  }
+
   &__list2 {
     display: flex;
     flex-direction: column;
     row-gap: 32px;
+    padding: auto;
   }
 
   &__number {
